# Cpp-Monadic-Types-Maybe-and-Either

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt  Either.h  ExpensiveToCopy.h  Maybe.h  MaybeEitherCommon.h.in  MaybeEitherDemo.h  MaybeEitherDemoImplementation.h
include/ProgramActions/: MainProgramAction.h  MainProgramStrategy.h  ProgramAction.h  ShowHelpAction.h  ShowHelpClippStrategy.h  ShowShortHelpAction.h  ShowShortHelpStrategy.h  ShowUsageAction.h  ShowUsageClippStrategy.h  ShowVersionInfoAction.h  ShowVersionInfoStrategy.h  UnsupportedOptionsAction.h  UnsupportedOptionsClippStrategy.h
src/: CMakeLists.txt  ExpensiveToCopy.cpp  MaybeEitherDemo.cpp  MaybeEitherDemoImplementation.cpp
tests/: CMakeLists.txt  TestEither.cpp  TestMaybe.cpp
